--- a/hobby.html
+++ b/hobby.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hobby Table</title>
-    <link rel="stylesheet" href="style_ hobby.css">
+    <link rel="stylesheet" href="./css/ hobby.css">
 </head>
 <body>
     <div class="container">
