--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="./galery.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="./Gallery.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Galery</button>
           </a>
           <a class="main_small_a_item" href="./kontak.html" target="_blank" rel="nofollow">
